<resources>
    <string name="app_name">AplikasiKu</string>

    <string name="title_login">Masuk</string>

    <string name="login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="link_forgot_password">Lupa kata sandi?</string>
    <string name="link_registration">Belum punya akun? Daftar disini</string>
</resources>
