<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/title_login"
        android:textColor="@color/grey_smoke"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        style="@style/AppTheme.InputWhiteBordered"
        android:hint="@string/hint_username" />

    <EditText
        style="@style/AppTheme.InputWhiteBordered"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/link_forgot_password"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/grey_cloud" />

    <Button
        style="@style/AppTheme.ButtonPrimaryGradient"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/link_registration" />

</LinearLayout>